# swatch-story

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README-ja.md  README-jp.md  README-zh.md  README.md  ROADMAP.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/swatch_story/: __init__.py  cli.py  compare.py  gallery.py  palette.py  report.py
tests/: test_cli.py  test_compare.py  test_docs_examples.py  test_gallery.py  test_lab_clustering_snapshots.py  test_palette.py  test_report.py
