[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swatch-story"
version = "0.1.0"
description = "Local-first image color stories with JSON, CSS, Markdown, and HTML reports."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "codecat-ai", email = "179451832+codecat-ai@users.noreply.github.com" },
]
keywords = ["color", "palette", "image", "accessibility", "report"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Utilities",
]
dependencies = [
  "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
swatch-story = "swatch_story.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/swatch_story"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
